--- a/styels.css
+++ b/styels.css
@@ -5,6 +5,10 @@
   font-family: sans-serif;
 }
 
+#list {
+  color: rgb(241, 43, 43);
+}
+
 body {
   background-color: #272a31;
   color: #d3d3d3;
@@ -21,6 +25,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 7px;
+  margin-top: 2px;
 }
 
 header .logo a {
@@ -39,6 +44,7 @@ header ul li {
   font-size: 16px;
   padding: 7px;
   margin: 0;
+  cursor: pointer;
 }
 
 header ul #contact-page {
@@ -156,7 +162,7 @@ form input:hover {
 
 footer {
   position: absolute;
-  bottom: 10px;
+  bottom: 3px;
   width: 100%;
   border: 1px solid #d4d2d2;
   padding: 10px;
