--- a/styels.css
+++ b/styels.css
@@ -10,20 +10,60 @@ body {
   color: #d3d3d3;
 }
 
-ul {
-  list-style-type: none;
+h2 {
+  margin-bottom: 30px;
+  text-align: center;
 }
 
-li {
-  padding: 7px;
-  margin: 0;
+header {
+  border: 1px solid #d4d2d2;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 7px;
 }
 
-li:hover {
-  background-color: #52545a;
+header .logo a {
+  color: #d4d2d2;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+header ul {
+  display: flex;
+  list-style-type: none;
+}
+
+header ul li {
+  border-right: 1px solid #d4d2d2;
+  font-size: 16px;
+  padding: 7px;
+  margin: 0;
+}
+
+header ul #contact-page {
+  border-right: none;
+}
+
+main {
+  width: 100%;
+  margin: auto;
+}
+
+.section {
+  margin: 100px  0 50px;
+  padding: 20px;
+}
+
+.contact {
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.contact-list {
+  padding-left: 40px;
+  margin-top: 15px;
 }
 
 .title {
@@ -36,38 +76,56 @@ li:hover {
   margin: 10px;
 }
 
-li span {
+#awesomeBooks ul {
+  list-style-type: none;
+}
+
+#awesomeBooks li {
+  padding: 7px;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#awesomeBooks li:hover {
+  background-color: #52545a;
+}
+
+#awesomeBooks li span {
   font-weight: bold;
 }
 
-li .btn {
+#awesomeBooks li .btn {
   display: block;
   padding: 5px 10px;
   cursor: pointer;
-}
-
-hr {
-  width: 70px;
-  margin: 30px auto;
+  font-weight: bold;
+  color: rgb(241, 43, 43);
 }
 
 .form-section {
   display: flex;
   justify-content: center;
-  margin-top: 40px;
+  width: 70%;
+  margin: 40px auto;
 }
 
-.form-section h2 {
-  margin-bottom: 15px;
-  text-align: center;
+form {
+  width: 100%;
 }
 
 form input {
   width: 100%;
-  height: 25px;
-  padding-left: 6px;
+  padding: 6px 7px;
   font-size: 16px;
   font-weight: bold;
+  outline: none;
+  border-radius: 10px;
+}
+
+form input:hover {
+  background-color: #f4f5f7;
 }
 
 .form-btn {
@@ -75,11 +133,72 @@ form input {
 }
 
 .form-btn button {
-  padding: 5px 10px;
+  padding: 6px 10px;
   font-weight: bold;
+  font-size: 16px;
   cursor: pointer;
+  background-color: #52545a;
+  color: #fff;
+  border: 1px solid #d3d3d3;
+  box-shadow: 2px 2px 1px #d3d3d3;
+  margin-right: 5px;
 }
 
 #error {
-  color: red;
+  color: rgb(241, 43, 43);
+  width: 50%;
+  margin: auto;
+}
+
+.hiden {
+  display: none;
+}
+
+footer {
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  border: 1px solid #d4d2d2;
+  padding: 10px;
+}
+
+footer p {
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  header {
+    padding: 7px 80px;
+  }
+
+  header .logo a {
+    font-size: 25px;
+  }
+
+  header ul li {
+    padding: 7px 35px;
+  }
+
+  header ul #contact-page {
+    border-right: none;
+  }
+
+  .section {
+    width: 600px;
+    margin: 100px auto;
+  }
+
+  .contact {
+    width: 500px;
+    font-family: sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+  }
+
+  .contact-list {
+    text-align: left;
+    padding-left: 70px;
+    margin-top: 40px;
+    line-height: 1.5;
+  }
 }
